<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".NoteActivity">
    <item
        android:id="@+id/btn_back"
        android:icon="@drawable/baseline_add_home_24"
        app:showAsAction="always"
        android:title="home" />

    <item
        android:id="@+id/btn_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always" />

    <item
        android:id="@+id/btn_sort"
        android:icon="@drawable/numeric_to_alphabetical"
        android:title="@string/sort"
        app:showAsAction="always" />

    <item
        android:id="@+id/btn_settings"
        android:icon="@drawable/setting_24"
        android:title="@string/settings"
        app:showAsAction="ifRoom" />

</menu>
