<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainScreenActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:drawableLeft="@drawable/all_notes"
            android:onClick="show_notes"
            android:text="@string/show_notes" />

        <Button
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:drawableLeft="@drawable/create_notes"

            android:onClick="create_notes"
            android:text="@string/create_notes" />

        <Button
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"

            android:drawableLeft="@drawable/delete"
            android:onClick="delete_notes"
            android:text="@string/delete_notes" />

        <Button
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:drawableLeft="@drawable/setting_24"
            android:onClick="setting"

            android:text="@string/settings" />

        <Button
            android:layout_width="200dp"
            android:layout_height="70dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:onClick="logout"
            android:text="@string/logout" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>