<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity_Login">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp">
<ImageView
    android:layout_width="300dp"
    android:layout_height="200dp"
android:layout_marginBottom="16dp"
    android:layout_gravity="center"
    android:src="@drawable/app_logo"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textSize="28dp"
            android:textColor="@color/cardview_dark_background"
  />

        <EditText
            android:id="@+id/usernameEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:hint="@string/username"
            android:layout_marginBottom="16dp"/>

        <EditText
            android:id="@+id/passwordEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_below="@id/usernameEditText"/>

        <Button
            android:id="@+id/loginButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_gravity="center"

            android:layout_below="@id/passwordEditText"
            android:layout_marginTop="16dp"
            android:onClick="login2"/>
        <Button
            android:id="@+id/signupButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:layout_gravity="center"
            android:layout_below="@id/passwordEditText"
            android:layout_marginTop="16dp"
            android:onClick="signup"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>